--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.17",
+    "@mui/styles": "^5.14.17",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
