--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.19.0",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "socket.io-client": "^4.7.2"
   },
