--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/styles": "^5.14.17",
+    "@mui/x-date-pickers": "^6.18.4",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "dayjs": "^1.11.10",
     "framer-motion": "^10.16.4",
     "reacharts": "^0.4.5",
     "react": "^18.2.0",
